--- a/styles/style.css
+++ b/styles/style.css
@@ -158,7 +158,7 @@ button {
   background-color: var(--color-text);
   overflow: hidden;
   z-index: 999; /* So that videos won't go over the nav */
-  transition: height 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
   display: grid;
   grid-template-rows: repeat(3, auto); /* Allow three rows for links */
 }
@@ -181,19 +181,19 @@ button {
 }
 
 #toggle:checked + .hamburger + .nav a {
-  opacity: 0.9; /* Fade in items */
+  opacity: 1; /* Fade in items */
 }
 
 
 /*******************************************/
 /* HOVER EFFECT WITH WHITE LINE UNDER LINK */
 /*******************************************/
-nav a {
+.nav a {
   position: relative;
   display: inline-block;
 }
 
-nav a::after {
+.nav a::after {
   content: ""; /* To have space for the underline */
   position: absolute;
   width: 0;
@@ -203,8 +203,9 @@ nav a::after {
   left: 0;
 }
 
-nav a:hover::after {
+.nav a:hover::after {
   width: 100%;
+  transition: ease 0.5s;
 }
 
 
@@ -234,15 +235,10 @@ main > h1 {
 }
 
 .main-header button,
-footer button {
+main button {
   background-color: var(--color-background);
   border: none;
   display: grid;
-}
-
-/* So that the arrow is going the other way */
-footer button:not(:first-child) {
-  transform: rotate(180deg);
 }
 
 
@@ -338,9 +334,6 @@ article {
 .carousel-list {
   display: flex; /* For horizontal layout */
   transition: 0.5s ease; /* Smooth transition for sliding */
-}
-
-.carousel-list ul {
   display: flex;
   padding: 0;
   list-style: none; /* Remove list bullets */
@@ -453,7 +446,7 @@ ol li p {
 }
 
 /* Parent container */
-.containerButton {
+.container-button {
   display: grid;
   place-items: center;
   width: 100%;
@@ -535,7 +528,7 @@ section {
   justify-content: center;
 }
 
-.footer {
+footer {
   display: grid;
   grid-template-columns: 1fr auto; /* Left column for copyright, right for social media */
   align-items: end;
